--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "express-hello-world",
+  "name": "cse341",
   "version": "1.0.0",
-  "description": "Express Hello World on Render",
-  "main": "app.js",
-  "repository": "https://github.com/render-examples/express-hello-world",
-  "author": "Render Developers",
-  "license": "MIT",
-  "private": false,
+  "description": "CSE341",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js"
+    "test": "errore?"
   },
-  "dependencies": {
-    "express": "^4.18.2"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IMUST1995/CSE341.git"
   },
-  "engines": {
-    "node": ">=14"
-  }
+  "keywords": [
+    "API"
+  ],
+  "author": "Zeir Braidi",
+  "license": "UNLICENSED",
+  "bugs": {
+    "url": "https://github.com/IMUST1995/CSE341/issues"
+  },
+  "homepage": "https://github.com/IMUST1995/CSE341#readme"
 }
