--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/IMUST1995/CSE341/issues"
   },
-  "homepage": "https://github.com/IMUST1995/CSE341#readme"
+  "homepage": "https://github.com/IMUST1995/CSE341#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
