--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "CSE341",
   "main": "server.js",
   "scripts": {
-    "test": "errore?"
+    "test": "errore?",
+    "start": "nodemon server,js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
   "homepage": "https://github.com/IMUST1995/CSE341#readme",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
